# qtasks

./: .flake8  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.github/workflows/: ci.yml  docs.yml
api/asyncio/queuetasks/: index.html
api/brokers/async_kafkabroker/: index.html
api/brokers/async_rabbitmqbroker/: index.html
api/brokers/async_redisbroker/: index.html
api/brokers/async_socket/: index.html
api/brokers/basebroker/: index.html
api/brokers/sync_kafkabroker/: index.html
api/brokers/sync_rabbitmqbroker/: index.html
api/brokers/sync_redisbroker/: index.html
api/brokers/sync_socket/: index.html
api/classes/async_redis_commands/: index.html
api/classes/baseqtasks/: index.html
api/classes/sync_redis_commands/: index.html
api/contexts/async_context/: index.html
api/contexts/sync_context/: index.html
api/exceptions/: index.html
api/executors/async_task_executor/: index.html
api/executors/basetask_executor/: index.html
api/executors/sync_task_executor/: index.html
api/globalconfig/async_redisglobalconfig/: index.html
api/globalconfig/baseglobalconfig/: index.html
api/globalconfig/sync_redisglobalconfig/: index.html
api/libraries/django/: index.html
api/logs/: index.html
api/middlewares/basemiddleware/: index.html
api/middlewares/task_middleware/: index.html
api/models/task/: index.html
api/plugins/errors/: index.html
api/plugins/triggers/: index.html
api/queuetasks/: index.html
api/registries/async_task_decorator/: index.html
api/registries/sync_task_decorator/: index.html
api/results/async_result/: index.html
api/results/sync_result/: index.html
api/router/: index.html
api/schemas/global_config/: index.html
api/schemas/inits/: index.html
api/schemas/queueconfig/: index.html
api/schemas/task_exec/: index.html
api/schemas/task_status/: index.html
api/schemas/task_status_enum/: index.html
api/schemas/test_config/: index.html
api/starters/async_starter/: index.html
api/starters/basestarter/: index.html
api/starters/sync_starter/: index.html
api/states/: index.html
api/webview/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/configuration/: index.html
architecture/extensibility/: index.html
architecture/integrations/: index.html
architecture/task_flow/: index.html
assets/css/: images.css
blog/: index.html
changelog/: index.html
components/: index.html
console/: index.html
docs/: CNAME  index.md  mkdocs.yml
docs/docs/: index.md
docs/en/: changelog.md  components.md  console.md  getting_started.md  index.md  install.md  next.md  schemas.md  tests.md
docs/en/api/: exceptions.md  (+2 more)
docs/ru/: blog.md  changelog.md  components.md  console.md  examples.md  features.md  getting_started.md  index.md  install.md  next.md  schemas.md  tests.md
examples/: based_async_app.py  based_async_app_grpc.py  based_async_plugins_app.py  based_async_states_app.py  based_sync_app.py  index.html  router_tasks.py  shared_tasks.py  test_async_task_wait.py  test_async_timer.py  test_concurrent_tasks.py  test_flushall.py  test_ping.py  test_sync_task_wait.py  test_sync_task_wait_grpc.py  test_task_wait.py
examples/analytics/: index.html
examples/async/: based_async_app.py  router_tasks.py  shared_tasks.py  test_async_task_wait.py
examples/cls/: based_async_app_cls.py  test_async_cls.py  test_async_taskutils_wait.py
examples/concurrent/: test_async_concurrent_tasks.py  test_sync_concurrent_tasks.py
examples/depends/: based_async_depends.py  based_sync_depends.py  test_async_depends_wait.py  test_sync_depends_wait.py
examples/echo/: index.html
examples/env/: based_async_app.py
examples/features/: index.html
examples/grpc/: based_sync_app_grpc.py  test_async_task_wait_grpc.py  test_sync_task_wait_grpc.py
examples/integrations/: index.html
examples/libs/: task_executor.py  task_middleware.py
examples/plugins/: based_async_plugins_app.py  index.html  test_async_task_wait_plugin.py
examples/states/: based_async_states_app.py  test_async_task_wait_states.py
examples/sync/: based_sync_app.py  router_tasks.py  shared_tasks.py  test_sync_task_wait.py
examples/timers/: test_async_timer.py  test_sync_timer.py
examples/variables/: index.html
examples/yield/: index.html
features/: index.html
features/contexts/: index.html
features/depends/: index.html
features/pydantic/: index.html
features/states/: index.html
features/stats/: index.html
features/task/: index.html
features/timer/: index.html
features/uniqueness/: index.html
features/yield/: index.html
getting_started/: index.html
install/: index.html
next/: index.html
ru/: index.html
ru/architecture/: index.html
ru/blog/: index.html
ru/changelog/: index.html
ru/components/: index.html
ru/console/: index.html
ru/examples/: index.html
ru/features/: index.html
ru/getting_started/: index.html
ru/install/: index.html
ru/next/: index.html
ru/schemas/: index.html
ru/tests/: index.html
schemas/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
src/qtasks/: __init__.py  __main__.py  _state.py  logs.py  qtasks.py  version.py
tests/: conftest.py  index.html  main.py  test_async_task.py  test_sync_task.py
tests/apps/: app_async.py  app_sync.py  app_test_async.py
tests/async/: test_async_grpc.py  test_async_task.py
tests/locust/: app.py  http_plugin.py  main.py
tests/sync/: test_sync_grpc.py  test_sync_task.py
(+457 files in other folders)
