[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["qtasks*"]

[project]
name = "qtasks"
version = "1.4.0"
authors = [
  { name="txello", email="txello@inbox.ru" },
]
description = "Queue Tasks Framework"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typing-extensions>=4.12.2",
    "redis>=5.2.1",
    "anyio>=4.9.0",
    "asyncio_atexit>=1.0.1",
    "apscheduler>=3.11.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
redis = ["redis>=5.2.1"]
rabbitmq = ["aio-pika>=9.5.5", "pika>=1.3.2"]
kafka = ["kafka>=2.2.10", "aiokafka>=0.12.0"]

[project.urls]
Homepage = "https://github.com/txello/qtasks"
Issues = "https://github.com/txello/qtasks/issues"

[project.scripts]
qtasks = "qtasks.__main__:main"