[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["qtasks*"]

[project]
name = "qtasks"
version = "1.6.0"
authors = [
  { name="txello", email="txello7@proton.me" },
]
description = "Queue Tasks Framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typing-extensions>=4.12.2",
    "redis>=5.2.1",
    "anyio>=4.5.0,<4.9.0; python_version < '3.11'",
    "anyio>=4.9.0; python_version >= '3.11'",
    "asyncio_atexit>=1.0.1",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.6,<2.11.7; python_version < '3.11'",
    "pydantic>=2.11.7; python_version >= '3.11'"
]

license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
redis = ["redis>=5.2.1"]
rabbitmq = ["aio-pika>=9.5.5", "pika>=1.3.2"]
kafka = ["kafka>=2.2.10", "aiokafka>=0.12.0"]
test = [
  "pytest>=8.3.5,<8.4.1; python_version < '3.11'",
  "pytest>=8.4.1; python_version >= '3.11'",
  "pytest-asyncio>=0.24.0,<1.1.0; python_version < '3.11'",
  "pytest-asyncio>=1.1.0; python_version >= '3.11'"
]

[project.urls]
Homepage = "https://github.com/txello/qtasks"
Issues = "https://github.com/txello/qtasks/issues"

[project.scripts]
qtasks = "qtasks.__main__:main"

[tool.ruff]
line-length = 88
ignore = ["E501"]

[tool.ruff.lint]
select = ["SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["D100", "D101", "D102", "D103", "D107", "E226", "E402", "F401"]
"src/qtasks/tests/async_classes.py" = ["D101", "D102", "D107"]
"src/qtasks/tests/sync_classes.py" = ["D101", "D102", "D107"]
"tests/apps/*" = ["D103", "E226"]
